--- a/src/app/styles/shared.scss
+++ b/src/app/styles/shared.scss
@@ -3,3 +3,18 @@ $font-color-alt: white;
 
 $dark-blue: #263A55;
 $light-gray: #EEEEEE;
+
+$content-width: 1260px;
+
+$xxs: 480px;
+$xs: 768px;
+$sm: 991px;
+$md: 1280px;
+$lg: 1920px;
+$xl: 5000px;
+
+@mixin responsive($query) {
+    @media ( max-width: + $query ) {
+        @content;
+    }
+}
