--- a/src/app/components/project/project.scss
+++ b/src/app/components/project/project.scss
@@ -7,18 +7,18 @@ $project-font-color: var(--project-font-color);
 .project-card {
     position: relative;
     display: flex;
-    gap: 2rem;
+    // gap: 2rem;
 
     max-width: 1920px;
-    width: 90%;
+    // width: 90%;
     height: 400px;
     margin: auto;
-    margin-bottom: 2rem;
+    // margin-bottom: 2rem;
 
     box-sizing: border-box;
     
-    padding: 1rem;
-    border-radius: 20px;
+    // padding-top: 1rem;
+    // border-radius: 20px;
 
     background: $project-bg;
     color: $project-font-color;
@@ -28,26 +28,41 @@ $project-font-color: var(--project-font-color);
 
     @include responsive($md) {
         flex-direction: column;
-        height: 700px;
+        height: 500px;
     }
 
+    transition: height .5s;
 }
 
 .project-card:hover {
-    transform: translateY(-4px);
+    // transform: translateY(-4px);
     height: 500px;
-    box-shadow: 0 20px 60px rgba(0,0,0,0.35);
+    transition: height .5s;
 
     @include responsive($md) {
-        height: 1000px;
+        height: 800px;
+    }
+}
+
+:host:nth-child(even) .project-card {
+    flex-direction: row-reverse;
+
+    @include responsive($md) {
+        flex-direction: column;
     }
 }
 
 .media {
     flex: 1;
     position: relative;
-    border-radius: 14px;
+    transition: flex .5s;
+    // border-radius: 14px;
     overflow: hidden;
+
+    &:hover {
+        flex: 1.5;
+        transition: flex .5s;
+    }
 }
 
 /* CONTENT */
@@ -56,6 +71,8 @@ $project-font-color: var(--project-font-color);
     display: flex;
     flex-direction: column;
     padding: 1.5rem;
+    box-shadow: inset 0 0 20px rgba(0,0,0,0.35);
+    margin-top: .5rem;
 }
 
 /* HEADER */
@@ -69,6 +86,8 @@ $project-font-color: var(--project-font-color);
     font-size: 1.5rem;
     font-weight: 600;
     line-height: 1.2;
+    margin-top: .5rem;
+    margin-bottom: 1rem;
 }
 
 .date {
