correct router link on home link cards

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -50,13 +50,13 @@
 </section>
 <section id="links-container">
   <div id="links">
-  <a class="link-card" href="/portfolio">
+<a class="link-card" routerLink="/portfolio">
     <img id="portfolio" class="elevate" src="assets/images/link_portfolio_logo.png" alt="" />
   </a>
-  <a class="link-card" href="/cv">
+  <a class="link-card" routerLink="/cv">
         <img id="cv" class="elevate" src="assets/images/link_cv_logo.jpg" alt="" />
   </a>
-  <a class="link-card" href="">
+<a class="link-card" routerLink="">
     <img id="freelance" class="elevate" src="assets/images/link_freelance_logo.jpg" alt="" />
   </a>
   </div>
