--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,4 +1,6 @@
-<div class="header-container">
+<div class="header-container"
+     [class.header-hidden]="!isVisible()"
+     [class.header-visible]="isVisible()">
     <header>
         <nav class="right">
             <ul>
@@ -14,7 +16,7 @@
             </ul>
         </nav>
         <nav class="center">
-            <p> Logo </p>
+            <img class="logo" src="assets/images/hozen_emacs_logo_zen.png" alt="" />
         </nav>
         <nav class="left">
             <ul>
