--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -1,9 +1,26 @@
 @use "../../styles/shared.scss" as *;
 
+.header-hidden {
+    transform: translateY(-100%);
+}
+
+.header-visible {
+    transform: translateY(0);
+}
+
 .header-container {
-    background-color: #EFEFEF;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 50px;
-    
+    z-index: 1;
+    background: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(10px);
+
+    transition: transform 0.3s ease-in-out, background-color 0.3s ease;
+    will-change: transform;
+
     header {
         display: grid;
         grid-template-columns: 1fr auto 1fr;
@@ -19,7 +36,14 @@
             padding: 0;
         }
 
-       
+        a {
+            color: inherit;
+            text-decoration: none;
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }
 
         // Pages section
         nav.right {
@@ -40,6 +64,9 @@
         nav.center {
             text-align: center;
 
+            .logo {
+                max-height: 50px;
+            }
         }
 
         // Actions section
