add contact information

--- a/src/app/components/contact/contact.html
+++ b/src/app/components/contact/contact.html
@@ -12,11 +12,11 @@
             <div class="links">
               <div class="link-group">
                 <img src="assets/logos/email.svg" alt="" />
-                <a href="mailto:hello@yourcompany.com">hello@yourcompany.com</a>
+                <a href="mailto:enzo.durel.dev@gmail.com">enzo.durel.dev@gmail.com</a>
               </div>
               <div class="link-group">
                 <img src="assets/logos/linkedin.svg" alt="" />
-                <a href="#">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/enzo-durel-996998292">LinkedIn</a>
               </div>
             </div>
         </div>
@@ -55,8 +55,7 @@
                     <button type="submit">Envoyer</button>
                     </div>
                     
-                    </form>
+            </form>
         </div>
-
     </div>
 </section>
