update header & logos

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -20,8 +20,12 @@
         </nav>
         <nav class="left">
             <ul>
-                <li>Freelance</li>
-                <li>Contact</li>
+              <li>
+                <a routerLink="/">Freelance</a>
+              </li>
+              <li>
+                <a routerLink="/">Contact</a>
+              </li>
             </ul>
         </nav>
     </header>
