--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -7,8 +7,9 @@
 </section>
 <section id="resume-container">
   <div id="resume">
-    
-        <img id="profil" src="assets/images/photo_profil_crop.png" alt="" />
+    <div class="profil-container">
+        <img id="profil" src="assets/images/photo_profil.jpg" alt="" />
+    </div>
         <div id="presentation">
             <h1 class="white">Enzo "Hozen" Durel</h1>
             <p class="white">
