--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -13,9 +13,10 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 50px;
-    z-index: 1;
+    height: 3rem;
+    z-index: 2;
     background: rgba(255, 255, 255, 0.7);
+    color: #555;
     backdrop-filter: blur(10px);
 
     transition: transform 0.3s ease-in-out, background-color 0.3s ease;
@@ -29,6 +30,7 @@
         height: inherit;
         max-width: $content-width;
         margin: auto;
+        
 
         // Small reset
         ul, p {
@@ -39,9 +41,12 @@
         a {
             color: inherit;
             text-decoration: none;
+            padding: .5rem 1rem;
 
             &:hover {
-                text-decoration: underline;
+                // text-decoration: underline;
+                color: black;
+                border-bottom: solid 3px black;
             }
         }
 
@@ -53,10 +58,6 @@
             ul {
                 list-style: none;
                 display: flex;
-
-                li {
-                    margin-right: 2em;
-                }
             }
         }
 
@@ -65,7 +66,7 @@
             text-align: center;
 
             .logo {
-                max-height: 50px;
+                max-height: 3rem;
             }
         }
 
@@ -77,10 +78,6 @@
             ul {
                 list-style: none;
                 display: flex;
-
-                li {
-                    margin-left: 2em;
-                }
             }  
         }
 
