create cv components; dev profil and skill comp; update links visuals

--- a/src/app/pages/cv/cv.html
+++ b/src/app/pages/cv/cv.html
@@ -1,1 +1,6 @@
-<p>cv works!</p>
+<section class="cv-container">
+  <app-profil></app-profil>
+  <app-competences></app-competences>
+  <app-exppro></app-exppro>
+  <app-formation></app-formation>
+</section>
