--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -5,6 +5,16 @@
     padding-bottom: 2rem;
 }
 
+.round-border {
+    background-color: #EEE;
+    height: 0px;
+    transform: translateY(-1rem);
+
+    svg {
+        filter: drop-shadow(0 0 1rem rgba(0, 0, 0, .4));
+    }
+}
+
 #resume {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
@@ -31,10 +41,6 @@
         h1 {
             font-size: 48px;
             text-align: center;
-        }
-
-        .white {
-            color: white;
         }
 
         @include responsive($sm) {
@@ -138,46 +144,55 @@
 #links-container {
 
     background-color: #333;
-    height: 300px;
     overflow-y: hidden;
+    min-height: 12vh;
     
     #links {
-        
         margin: auto;
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: center;
+        align-items: flex-end;
+        gap: 15%;
         max-width: 1000px;
+        padding: 0 2rem;
 
         .link-card {
-            margin-top: 130px;
-            transition: margin .3s;
-            width: 230px;
-            height: 320px;
+
+            #freelance {
+            }
+
+            #portfolio {
+            }
+
+            #cv {
+            }
+            
+            transform: translateY(60px);
+            transition: transform .3s;
 
             img {
                 object-fit: cover;
+                max-height: 200px;
                 width: 100%;
-                height: 100%;
-                border-radius: 15px;
-                filter: drop-shadow(0 20px 5px rgba(0, 0, 0, 0.7));
+                transition: filter .3s;
+                filter: drop-shadow(0 20px 5px rgba(0, 0, 0, .5));
+
+                &:hover {
+                    filter: drop-shadow(0 60px 8px rgba(0, 0, 0, 0.4));
+                }
             }
 
             &:hover {
-                margin-top: 80px;
-                transition: margin .3s;
-
-                img {
-                    filter: drop-shadow(0 40px 10px rgba(0, 0, 0, 0.5));
-                }
+                transform: translateY(30px);
+                transition: transform .3s;
             }
         }
     }    
 }
 
-
-
 #banner-container {
+    z-index: 1;
 
     #background {
         position: absolute;
