--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 $primary-font: 'Inter', sans-serif;
 
+.white {
+    color: white;
+}
+
 body {
     font-family: $primary-font;
 }
