--- a/src/app/components/profil/profil.html
+++ b/src/app/components/profil/profil.html
@@ -1,10 +1,11 @@
 <section class="profil-container">
     <div class="photo-container">
-        <img src="assets/images/photo_profil.jpg" alt="" />
+        <img src="assets/images/cv/photo_profil.jpg" alt="" />
     </div>
     <div class="presentation">
-        <h1 class="white">Enzo Durel</h1>
-        <p>
+      <h1 class="white">Enzo Durel</h1>
+    <h2 class="white">Ingénieur en informatique</h2>
+    <p>
             Je suis ingénieur en informatique spécialisé en systèmes interactifs, logiciels embarqués et intelligence
             artificielle.
             Formé en France et aux États-Unis, j’ai acquis une solide expérience en C++ et Python à travers divers
