--- a/src/app/pages/cv/cv.html
+++ b/src/app/pages/cv/cv.html
@@ -3,4 +3,5 @@
   <app-competences></app-competences>
   <app-exppro></app-exppro>
   <app-formation></app-formation>
+  <app-contact></app-contact>
 </section>
