--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,14 +1,14 @@
 <section id="banner-container">
-    <img id="background" src="assets/images/river_forest.jpg" alt="" />
-    <img id="background-shadow" src="assets/images/background_lum.png" alt="" />
+    <img id="background" src="assets/images/home/river_forest.jpg" alt="" />
+    <img id="background-shadow" src="assets/images/home/background_lum.png" alt="" />
     <div id="logo-container">
-        <img id="hozen-logo" src="assets/images/hozen_emacs_logo_zen.png" alt="" />
+        <img id="hozen-logo" src="assets/logos/hozen_emacs_logo_zen.png" alt="" />
     </div>
 </section>
 <section id="resume-container">
     <div id="resume">
         <div class="profil-container">
-            <img id="profil" src="assets/images/photo_profil.jpg" alt="" />
+            <img id="profil" src="assets/images/home/photo_profil.jpg" alt="" />
         </div>
         <div id="presentation">
             <h1 class="white">Enzo "Hozen" Durel</h1>
@@ -24,7 +24,7 @@
                 rêvais d’être: un créateur.
             </p>
         </div>
-        <app-timeline id="frise-container"> </app-timeline>
+        <app-timeline urlEvent="assets/data/timeline.json" id="frise-container"> </app-timeline>
         <div id="paragraph-container">
             <p>
                 Une soif d’apprendre, de comprendre et de me rapprocher de la vérité. Je suis passioné par la
@@ -42,10 +42,10 @@
             </p>
         </div>
         <div id="photos-container">
-            <img src="assets/images/photo_groupe_pr.jpg" alt="" />
-            <img src="assets/images/photo_groupe_run.jpg" alt="" />
-            <img src="assets/images/photo_groupe_graduate.jpg" alt="" />
-            <img src="assets/images/photo_groupe_japon.jpg" alt="" />
+            <img src="assets/images/home/photo_groupe_pr.jpg" alt="" />
+            <img src="assets/images/home/photo_groupe_run.jpg" alt="" />
+            <img src="assets/images/home/photo_groupe_graduate.jpg" alt="" />
+            <img src="assets/images/home/photo_groupe_japon.jpg" alt="" />
         </div>
     </div>
 </section>
@@ -60,13 +60,13 @@
         </div>
         <div id="links">
         <a class="link-card" routerLink="/portfolio">
-            <img id="portfolio" class="elevate" src="assets/logos/portfolio_logo.png" alt="" />
+            <img src="assets/logos/portfolio_logo.png" alt="" />
         </a>
         <a class="link-card" routerLink="/cv">
-            <img id="cv" class="elevate" src="assets/logos/cv_logo.png" alt="" />
+            <img src="assets/logos/cv_logo.png" alt="" />
         </a>
         <a class="link-card" routerLink="">
-            <img id="freelance" class="elevate" src="assets/logos/freelance_logo.png" alt="" />
+            <img src="assets/logos/freelance_logo.png" alt="" />
         </a>
     </div>
 </section>
