--- a/src/app/components/competences/competences.scss
+++ b/src/app/components/competences/competences.scss
@@ -1,6 +1,9 @@
+$comp-max-width: 1200px;
+$comp-icon-dim: 20px;
+
 .icon {
-    max-width: 20px;
-    max-height: 20px;
+    max-width: $comp-icon-dim;
+    max-height: $comp-icon-dim;
 }
 
 .invert {
@@ -12,8 +15,11 @@
     grid-template-columns: 4fr 1fr;
     grid-template-rows: auto auto;
     grid-gap: 2rem;
-    max-width: 1260px;
-    margin: 1rem;
+
+    max-width: $comp-max-width;
+    padding: 2rem;
+    padding-top: 0;
+    margin: auto;
 
     ul, p {
         margin: .3rem 0;
@@ -38,12 +44,15 @@
 
     }
 
-    h2:before {
+    h2 {
+        width: fit-content;
+    }
+    
+    h2::before {
         content: '';
         display: block;
         transform: translateY(2rem) translateX(.5rem);
-        min-width: 20%;
-        width: 100px;
+        width: 100%;
         border-bottom: solid 1rem rgba(255, 255, 255, .3);
     }
 
