--- a/src/app/components/contact/contact.scss
+++ b/src/app/components/contact/contact.scss
@@ -17,7 +17,7 @@ $input-bg-color: white;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 60px 20px;
+    padding: 2rem 1rem;
     color: $font-color-alt;
 }
 
