--- a/src/app/pages/cv/cv.scss
+++ b/src/app/pages/cv/cv.scss
@@ -3,8 +3,10 @@ $cv-bg: #263a55;
 .cv-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    
     margin-top: 3rem;
     background-color: $cv-bg;
+
+    app-contact {
+        z-index: 1;
+    }
 }
