--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 $primary-font: 'Inter', sans-serif;
 
+.cv-title {
+    width: fit-content;
+    margin: 1rem;
+    margin-top: 0;
+}
+
+.cv-title::before {
+    content: '';
+    display: block;
+    transform: translateY(2rem) translateX(.5rem);
+    width: 100%;
+    border-bottom: solid 1rem #869bd055;
+}
+
 .white {
     color: white;
 }
